--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "framer-motion": "^11.11.13",
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.456.0",
+    "notistack": "^3.0.2",
     "react": "^18.3.1",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-qr-code": "^2.0.15",
     "react-router-dom": "^6.28.0",
     "react-select": "^5.9.0",
