--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lucide-react": "^0.456.0",
     "notistack": "^3.0.2",
     "react": "^18.3.1",
+    "react-d3-tree": "^3.6.6",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
