--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.456.0",
     "notistack": "^3.0.2",
+    "print-js": "^1.6.0",
     "react": "^18.3.1",
     "react-d3-tree": "^3.6.6",
     "react-data-table-component": "^7.6.2",
@@ -28,7 +29,7 @@
     "react-qr-code": "^2.0.15",
     "react-router-dom": "^6.28.0",
     "react-select": "^5.9.0",
-    "react-to-print": "^3.0.2",
+    "react-to-print": "^3.0.6",
     "sweetalert2": "^11.14.5",
     "swiper": "^11.1.15",
     "vite-plugin-commonjs": "^0.10.3"
