--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^6.1.6",
     "@mui/material": "^6.1.6",
     "@mui/x-date-pickers": "^7.22.2",
+    "antd": "^5.24.7",
     "axios": "^1.7.7",
     "framer-motion": "^11.11.13",
     "html2canvas": "^1.4.1",
