--- a/package.json
+++ b/package.json
@@ -19,17 +19,20 @@
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "antd": "^5.24.7",
     "axios": "^1.7.7",
+    "dompurify": "^3.2.5",
     "framer-motion": "^11.11.13",
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.456.0",
     "notistack": "^3.0.2",
     "print-js": "^1.6.0",
+    "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-d3-tree": "^3.6.6",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-qr-code": "^2.0.15",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.28.0",
     "react-select": "^5.9.0",
     "react-to-print": "^3.0.6",
